<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general">
        <Preference
            android:key="default_browser"
            android:title="@string/preference_default_browser" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="cb_pull_refresh"
            android:title="@string/pull_to_refresh" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="cb_images"
            android:title="@string/block"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="savedata"
            android:title="@string/save_data" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="cb_javascript"
            android:title="@string/java"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="cb_colormode"
            android:title="@string/color_mode"/>
        <Preference
            android:key="agent"
            android:title="@string/agent"/>
        <Preference
            android:key="download"
            android:title="@string/download"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="cb_prefer_external_app_for_downloads"
            android:summary="@string/prefer_external_app_for_downloads_summary"
            android:title="@string/prefer_external_app_for_downloads_title"/>
        <Preference
            android:key="home"
            android:title="@string/home"/>
        <Preference
            android:key="search"
            android:title="@string/search"/>
        <Preference
            android:key="suggestions_choice"
            android:title="@string/search_suggestions"/>
    </PreferenceCategory>
</PreferenceScreen>
